# vggtSam

./: .gitignore  .gitmodules  README.md  command.txt  commands.txt  pyproject.toml  requirements.txt  test_sam_for_streamvggt_command.txt  update.txt
configs/: dense_fusion_train.yaml  fusion_debug.yaml  latent_fusion_train.yaml  object_fusion_train.yaml  scannetpp_2d.yaml  scannetpp_pinhole_2d.yaml
docs/: current.md  current_dense_training_structure.md  latent_fusion_training_flow.md  model_fusion.md  scannetpp_preprocessing.md
idea/: idea.md  idea_understanding.md  idea改进.md  method.md  ours_model.py  ours_training.py
scripts/: cache_scannetpp_rgb.py  debug_single_pair_overfit.py  export_latent_fusion_pointclouds.py  inspect_backbone_outputs.py  inspect_latent_fusion_features.py  inspect_scannetpp_instances.py  plot_training_curves.py  prepare_scannetpp_2d.py  run_sam3_sequence.py  smoke_fusion_model.py  train_dense_fusion.py  train_latent_fusion.py  train_object_fusion.py
streaming_couping/: __init__.py  commands.txt  commands_final_joint_pointcloud_pose.txt  commands_final_joint_pointcloud_pose_test.txt  commands_final_joint_pointcloud_pose_test_492_589.txt  commands_instance_ray_pose_v3.txt  commands_instance_ray_pose_v3_export.txt  commands_instance_token_pose.txt  commands_instance_token_pose_decoupled_v2.txt  commands_instance_token_pose_temporal_holdout_v2.txt  commands_joint_pointmap_ba.txt  commands_strict_geometry_train_then_test_492_589.txt  commands_v5_ablation_suite.txt  commands_v5_joint_solver_sweep.txt  readme.md
test_dframework/: DESIGN.md  (+15 more)
(+150 files in other folders)
