[project]
name = "vggtsam"
version = "0.1.0"
description = "Geometry-aware semantic tracking experiments built around ScanNet++ preprocessing."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
    "pillow>=9.0",
    "plyfile>=1.0",
    "pyyaml>=6.0",
    "tqdm>=4.64",
]

[project.optional-dependencies]
fast = [
    "numba>=0.58",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
